--- a/Desafio013-3/index.html
+++ b/Desafio013-3/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     <h1>Olá Mundo</h1>
-    
+    <div id="container">
+        <iframe id="frame" class="frame" src="imagens/tela-home.jpg" sandbox="sandbox"></iframe>
+    </div>
+    <aside>
+        <nav>
+        <a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="Home Page"></a><br>
+        <a href="paginas/facebook.html" target="frame"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+        <a href="paginas/insta.html" target="frame"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+        <a href="paginas/twitter.html" target="frame"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+        <a href="paginas/yt.html" target="frame"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+        <a href="paginas/git.html" target="frame"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+        </nav>
+    </aside>
 </body>
 </html>
