--- a/Desafio013-3/paginas/facebook.html
+++ b/Desafio013-3/paginas/facebook.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tela-facebook</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background: black url('../imagens/tela-facebook.jpg') no-repeat top center;
+            background-size: cover;
+        }
+
+    </style>
 </head>
-<body>
-    <img src="../imagens/tela-facebook.jpg" alt="">
+<body> 
 </body>
 </html>
