--- a/Desafio013-3/paginas/twitter.html
+++ b/Desafio013-3/paginas/twitter.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background: black url('../imagens/tela-twitter.jpg') no-repeat top center;
+            background-size: cover;
+        }
+
+    </style>
 </head>
 <body>
-    <img src="../imagens/tela-twitter.jpg" alt="">
     
 </body>
 </html>
