conclusão do projeto

--- a/Desafio013-3/paginas/facebook.html
+++ b/Desafio013-3/paginas/facebook.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tela-facebook</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: black url('../imagens/tela-facebook.jpg') no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
+    <title>Facebook</title>
 </head>
 <body> 
+    <img src="../imagens/tela-facebook.jpg" alt="facebook">
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCsLfS5--PAxX_H7kGHSRVFpsQFnoECAoQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fgustavoguanabara%2F%3Flocale%3Dpt_BR&usg=AOvVaw1A6ZQhoMwzW-BZihPtbd7v&opi=89978449" target="_blank">Acesse</a>
 </body>
 </html>
