--- a/Desafio013-3/paginas/home.html
+++ b/Desafio013-3/paginas/home.html
@@ -10,14 +10,19 @@
             padding: 0;
         }
 
-        body {
-            background: black url('../imagens/tela-home.jpg') no-repeat top center;
-            background-size: cover;
+        ::-webkit-scrollbar {
+            width: 0px;
+            height: 0px;
         }
 
+        img{
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <img src="../imagens/tela-home.jpg" alt="tela-home">
     
 </body>
 </html>
