--- a/Desafio013-3/paginas/twitter.html
+++ b/Desafio013-3/paginas/twitter.html
@@ -3,21 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: black url('../imagens/tela-twitter.jpg') no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
+    <title>Twitter</title>
 </head>
 <body>
+    <img src="../imagens/tela-twitter.jpg" alt="twitter">
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi1l-jb5u-PAxV5H7kGHUn6KjcQFnoECCQQAQ&url=https%3A%2F%2Fx.com%2Fguanabara&usg=AOvVaw1vrbb3PnD79r-IQQovSEPd&opi=89978449" target="_blank"> Acesse</a>
     
 </body>
 </html>
