--- a/Desafio013-3/paginas/youtube.html
+++ b/Desafio013-3/paginas/youtube.html
@@ -3,21 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: black url('../imagens/tela-youtube.png') no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="../paginas/estilos/social.css">
+    <title>Youtube</title>
 </head>
 <body>
-    
+    <img src="../imagens/tela-youtube.png" alt="tela-youtube">
+    <a href="https://www.youtube.com/c/CursoemVídeo/playlists" target="_blank">Acessar</a>
 </body>
 </html>
