--- a/Desafio013-3/paginas/github.html
+++ b/Desafio013-3/paginas/github.html
@@ -3,21 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: black url('../imagens/tela-github.jpg') no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
+    <title>GitHub</title>
 </head>
 <body>
+    <img src="../imagens/tela-github.jpg" alt="tela-github">
+    <a href="https://github.com/gustavoguanabara" target="_blank">Acesse</a>
     
 </body>
 </html>
