--- a/Desafio013-3/paginas/instagram.html
+++ b/Desafio013-3/paginas/instagram.html
@@ -3,21 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: black url('../imagens/tela-instagram.jpg') no-repeat top center;
-            background-size: cover;
-        }
-
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
+    <title>Instagram</title>
 </head>
 <body>
+    <img src="../imagens/tela-instagram.jpg" alt="instagram">
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj0jt7y5e-PAxVtpZUCHacWCNQQFnoECAwQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fgustavoguanabara%2F&usg=AOvVaw0aD0BtK6ltujjP6-IntuNe&opi=89978449" target="_blank">Acesse</a>
     
 </body>
 </html>
