--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <iframe src="../projeto-social/Desafio013-3/paginas/home.html"  name="tela" id="tela" frameborder="0"> seu navegador não é compatível com isso!</iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-home.jpg" alt="logo-home"></a><br>
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-github.jpg" alt="logo-github"></a><br>
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
-            <a href="#" target="tela"><img src="Desafio013-3/imagens/logo-facebook.jpg" alt="logo-facebook"></a>
+            <a href="../projeto-social/Desafio013-3/paginas/home.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/logo-home.jpg" alt="logo-home"></a><br>
+            <a href="../projeto-social/Desafio013-3/paginas/youtube.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
+            <a href="../projeto-social/Desafio013-3/paginas/github.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/logo-github.jpg" alt="logo-github"></a><br>
+            <a href="../projeto-social/Desafio013-3/paginas/instagram.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
+            <a href="../projeto-social/Desafio013-3/paginas/twitter.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/X_logo.jpg" alt="logo-twitter"></a><br>
+            <a href="../projeto-social/Desafio013-3/paginas/facebook.html" target="tela"><img src="../projeto-social/Desafio013-3/imagens/logo-facebook.jpg" alt="logo-facebook"></a>
         </section>
     </main>
 </body>
